[package]
name = "oxicast"
version = "0.1.0"
authors = ["Bernardo António Borda d'Água <berna.agua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "agent"
path = "src/agent/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
